libdvdnav (next)
 * add dvdnav_get_volid_string to obtain the volume id of the disc
 * add dvdnav_get_number_of_streams API to list tracks
 * add dvdnav_set_active_stream API to activate a stream
 * add dvdnav_toggle_spu_stream API to enable/disable the current SPU stream
 * add dvdnav_get_disk_region_mask API to get the reported version from the disk

libdvdnav (6.1.1)
 * fix build issues
 * improve CI

libdvdnav (6.1.0)
 * add a dvdnav_open2 API to setup a logging mechanism, similar to libdvdread
 * add a dvdnav_get_number_of_angles API
 * add a dvdnav_version API
 * rework the logs in the library and remove direct printf calls
 * handle out-of-order ADMAP entries blocking playback
 * fix crashes in dvdnav_describe_title_chapters in broken DVDs
 * cleanup old code and buildsystem

libdvdnav (6.0.1)
 * improve random playback mode, to work-around broken discs
 * fix divide-by-zerop issue in tmap search
 * fix pthread on OS/2

libdvdnav (6.0.0)
 * fix crashes on some DVD on describe_title call
 * fix various crashes related to PGC validity
 * fix compilation issues
 * fix API return codes (and bump release)

libdvdnav (5.0.3)
 * added dvdnav_open_stream to read from external read/seek callbacks
 * fixed reading DVD label regression

libdvdnav (5.0.2)
 * fixed 2 wrong asserts (LP #1236939, #570790)
 * fixed 2 crashes (in dvdnav_get_position and dvdnav_get_position_in_title)

libdvdnav (5.0.1)
 * removed assert on unknown VM commands, fixing playback of some DVDs
 * fixed a double free in dvdnav_free_dup
 * fixed an integer overflow, a data race condition and return inconsistency

libdvdnav (5.0.0)
 * Android support
 * fixed numerous crashes, assertions and corruptions
 * rewrite of the build-system, including silent rules
 * clean code, simplify and remove warnings
 * fix compilation in C++ applications
 * removal of remap .MAP files unused feature
 * remove the dvdnavmini library
 * fix compilation on OS/2 and Hurd

libdvdnav (4.2.1)