@@ -4,6 +4,8 @@ libdvdnav (next)
  * add dvdnav_set_active_stream API to activate a stream
  * add dvdnav_toggle_spu_stream API to enable/disable the current SPU stream
  * add dvdnav_get_disk_region_mask API to get the reported version from the disk
+ * dvdnav_get_next_block needs to provide the size of the data available in the
+   buffer
 
 libdvdnav (6.1.1)
  * fix build issues
